--- a/views/home.html
+++ b/views/home.html
@@ -66,7 +66,7 @@
             </div>
             <div class="nav-links">
                 <ul>
-                    <li><a href="#">Inicio</a></li>
+                    <li><a href="home.html">Inicio</a></li>
                     <li><a href="#">Series</a></li>
                     <li><a href="#">Peliculas</a></li>
                     <li><a href="#">Novedades populares</a></li>
@@ -82,23 +82,6 @@
                 </button>
                 <input id="search" type="text" list="peliculas" placeholder="Títulos, personas, géneros">
             </div>
-            <datalist id="peliculas">
-                <option value="GoodFellas">
-                <option value="Inglourious Basterds">
-                <option value="Kill Bill: Vol. 1">
-                <option value="Kill Bill: Vol. 2">
-                <option value="Once Upon a Time in Hollywood">
-                <option value="Pulp Fiction">
-                <option value="Taxi Driver">
-                <option value="The Irishman">
-                <option value="The Wolf Of Wall Street">
-                <option value="Acción">
-                <option value="Comedia">
-                <option value="Crimen">
-                <option value="Drama">
-                <option value="Martin Scorsese">
-                <option value="Quentin Tarantino">
-            </datalist>
         </div>
     </nav>
     <div id="generalContainer" class="container">
