--- a/views/home.html
+++ b/views/home.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="../css/main.css">
 </head>
 <body class="home-body">
-    <nav class="nav-home">
+    <nav id="nav" class="nav-home">
         <div class="logo-links">
             <div class="nav-logo">
                 <a href="home.html">
@@ -84,14 +84,27 @@
             </div>
         </div>
     </nav>
+    <div id="mainVideo" class="main">
+        <div id="mainBackdrop" class="teaser">
+            <iframe id="player" class="player" width="100%" height="100%" src="https://www.youtube.com/embed/sB7LEqzXl_Y?autoplay=1&mute=1&controls=0&iv_load_policy=3&showinfo=1&rel=0&fs=0&enablejsapi=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        </div>
+        <div id="logoInfo" class="logoInfo"></div>
+        <div id="soundAge" class="soundAge">
+            <div id="sound" class="sound">
+                <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg" class="Hawkins-Icon Hawkins-Icon-Standard"><path fill-rule="evenodd" clip-rule="evenodd" d="M11 4.00003C11 3.59557 10.7564 3.23093 10.3827 3.07615C10.009 2.92137 9.57889 3.00692 9.29289 3.29292L4.58579 8.00003H1C0.447715 8.00003 0 8.44774 0 9.00003V15C0 15.5523 0.447715 16 1 16H4.58579L9.29289 20.7071C9.57889 20.9931 10.009 21.0787 10.3827 20.9239C10.7564 20.7691 11 20.4045 11 20V4.00003ZM5.70711 9.70714L9 6.41424V17.5858L5.70711 14.2929L5.41421 14H5H2V10H5H5.41421L5.70711 9.70714ZM15.2929 9.70714L17.5858 12L15.2929 14.2929L16.7071 15.7071L19 13.4142L21.2929 15.7071L22.7071 14.2929L20.4142 12L22.7071 9.70714L21.2929 8.29292L19 10.5858L16.7071 8.29292L15.2929 9.70714Z" fill="#fff"></path><svg>
+            </div>
+            <div class="age"><span>18+</span></div>
+        </div>
+        
+        <div class="gradient"></div>
+    </div>
     <div id="generalContainer" class="container">
         <div id="containerSearch"></div>
     </div>
     <div id="bgInfo">
-        <div id="movieInfo">
-        </div>
+        <div id="movieInfo"></div>
     </div>
-    
+
     <!-- Slick Slider -->
     <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
     <script src='https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js'></script>
