--- a/scss/_home.scss
+++ b/scss/_home.scss
@@ -27,11 +27,11 @@
                 }
             }
             .nav-links{
-                margin-left: 44px;
+                margin-left: 3vw;
                 ul{
                     display: flex;
                     list-style: none;
-                    gap: 18px;
+                    gap: 20px;
                     li{
                         &:first-child{
                             a{
@@ -176,53 +176,53 @@
                 }
             }
             .reproducir{
+                height: 3vw;
+                margin-right: .75vw;
                 background-color: #fff;
+                padding: 0 1.8vw;
+                border: none;
+                border-radius: 5px;
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
-                padding: 10px 25px;
-                border: none;
-                border-radius: 5px;
-                margin: 0.25em;
-                margin-right: 0.5em;
                 &:hover{
                     background-color: #e6e6e6!important;
                     cursor: pointer;
                 }
                 svg{
-                    width: 30px;
-                    height: 30px;
+                    width: 1.8vw;
+                    height: 1.8vw;
                     margin-right: 10px;
                 }
                 span{
                     font-family: Arial, Helvetica, sans-serif;
                     font-weight: 600;
-                    font-size: 20px;
+                    font-size: 1.2vw;
                 }
             }
             .moreInfo{
+                height: 3vw;
                 background-color: rgba(109, 109, 110, 0.7);
                 display: flex;
                 flex-wrap: wrap;
                 align-items: center;
-                padding: 10px 25px;
+                padding: 0 1.8vw;
                 border: none;
                 border-radius: 5px;
-                margin: 0.25em;
                 &:hover{
                     background-color: rgba(109, 109, 110, 0.4) !important;
                     cursor: pointer;
                 }
                 svg{
-                    width: 30px;
-                    height: 30px;
+                    width: 1.8vw;
+                    height: 1.8vw;
                     margin-right: 10px;
                 }
                 span{
                     color: #fff;
                     font-family: Arial, Helvetica, sans-serif;
                     font-weight: 600;
-                    font-size: 20px;
+                    font-size: 1.2vw;
                 }
             }
         }
@@ -237,8 +237,8 @@
                 position: relative;
                 margin-right: 1.1vw;
                 border-radius: 50%;
-                width: 45px;
-                height: 45px;
+                width: 2.4vw;
+                height: 2.4vw;
                 background-color: transparent;
                 border: 1px solid rgba(255, 255, 255, 0.7);
                 &:hover{
@@ -248,8 +248,8 @@
                     opacity: 1;
                 }
                 svg{
-                    width: 22px;
-                    height: 22px;
+                    width: 1.4vw;
+                    height: 1.4vw;
                     position: absolute;
                     top: 50%;
                     left: 50%;
@@ -284,7 +284,7 @@
         position: relative;
         overflow: hidden;
         padding-top: 40%;
-        z-index: 15;
+        z-index: 5;
         .movies{
             position: relative;
             margin: 3.5vw 0;
@@ -294,11 +294,52 @@
             &:hover > .slider .slick-dots{
                 opacity: 1;
             }
-            h1{
-                margin: 0 4% 0.5em;
-                color: #e5e5e5;
-                font-size: 1.4vw;
+            &:hover > .title svg{
+                opacity: 1;
             }
+            .title{
+                margin: 0 4% 0.5em;
+                display: flex;
+                align-items: center;
+                cursor: pointer;
+                &:hover > h1{
+                    color: #fff;
+                }
+                &:hover > span{
+                    transform: translateX(0);
+                    opacity: 1;
+                }
+                &:hover > svg{
+                    transform: scale(.9) translateX(0);
+                }
+                h1{
+                    
+                    color: #e5e5e5;
+                    font-size: 1.4vw;
+                    margin-right: 1vw;
+                }
+                span{
+                    color: #54b9c5;
+                    font-size: .9vw;
+                    line-height: .8vw;
+                    margin-right: 4px;
+                    font-weight: 600;
+                    transform: translateX(-100%);
+                    opacity: 0;
+                    transition-property: transform, opacity;
+                    transition-duration: 1s;
+                }
+                svg{
+                    width: 18px;
+                    height: 18px;
+                    fill: #54b9c5;
+                    opacity: 0;
+                    transform: scale(1) translateX(-7.5vw);
+                    transition-property: transform;
+                    transition-duration: 1s;
+                }
+            }
+            
             .slider{
                 .slick-dots{
                     width: initial;
